# compliance-engine

./: .gitignore  .pep8  .pre-commit-config.yml  .releaserc.yml  MANIFEST.in  assertions.json  benchmark_results.json  devenv.nix  devenv.yaml  docker-compose.yml  evaluation_results.json  gdpr_benchmark_results.json  mise.toml  new_schema.sql  output.md  pci_dss_benchmark_results.json  pyproject.toml  schema_updated.sql  testE2E.API.http
.github/: copilot-instructions.md
.github/workflows/: publish.yml  release.yml
data/chroma_db/: chroma.sqlite3
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docker/test_db/: docker-compose.yml  testE2E.API.http
src/: manage.py
src/engine/: main.py  requirements-windows.txt
src/engine/experiments/: PCI_DSS_Semantic_Search_Chroma.ipynb
src/engine/scripts/: compliance_checker.py  environment_test.py  llm_inference.py  pci_compliance_checker.py  pdf_to_chroma.py
src/watchtower_ce/: __init__.py  asgi.py  celery.py  db.sqlite3  urls.py  wsgi.py
src/watchtower_ce/apps/: __init__.py  urls.py
src/watchtower_ce/apps/compliance/: admin.py  apps.py  assertion_builders.py  filters.py  ml_inference.py  models.py  redis_client.py  renderers.py  serializers.py  sql_execution.py  sse.py  tasks.py  urls.py  views.py
src/watchtower_ce/apps/compliance/analytics/: __init__.py  database_cs.py  schema_iteration_cs.py
src/watchtower_ce/apps/compliance/migrations/: 0001_initial.py  0002_alter_complianceframework_options.py  0002_complianceframework_delete_compliancestandard.py  0002_seed_compliance_frameworks.py  0003_clientdb_frameworks.py  0003_clientdbschema_name_description_version.py  0003_feature_3_5_compliance_assertion_check_models_api.py  0004_add_compliance_check_model.py  0005_complianceassertion_recommendation.py  0006_alter_complianceassertion_recommendation.py  0007_clientdbschema_description_clientdbschema_name_and_more.py  0008_remove_clientdbschema_sql_definition.py  0009_clientdbschema_sql_definition.py  0010_remove_clientdbschema_description_and_more.py
src/watchtower_ce/apps/users/: apps.py  serializers.py  urls.py  views.py
src/watchtower_ce/benchmark_suite/: __init__.py  benchmark_case.py  evaluators.py  helpers.py  runner.py  synonym_set.py
src/watchtower_ce/benchmark_suite/gold_standard/: __init__.py
src/watchtower_ce/benchmark_suite/gold_standard/gdpr/: stage_2.py  stage_4.py
src/watchtower_ce/benchmark_suite/gold_standard/pci_dss/: stage_2.py
src/watchtower_ce/cli/: ccdb.py  chroma.py  download_model.py  main.py  server.py  test.py
src/watchtower_ce/cli/download/: __init__.py  base.py  embedding.py
src/watchtower_ce/engine/: __init__.py  analyze_assertions.py  generate_assertions.py  main.py  requirements-linux.txt
src/watchtower_ce/engine/benchmark_suite/: ground_truth.py  metrics.py  runner.py
src/watchtower_ce/engine/benchmark_suite/gold_standard/: __init__.py
src/watchtower_ce/engine/benchmark_suite/gold_standard/gdpr/: stage_4.py
src/watchtower_ce/engine/benchmark_suite/gold_standard/pci_dss/: stage_2.py  stage_4.py
src/watchtower_ce/engine/clients/: __init__.py  context_retriever.py  llm_inference.py
src/watchtower_ce/engine/core/: __init__.py  compliance_checker.py  compliance_score.py  context_retriever.py  llm_inference.py  retrieval_server.py
src/watchtower_ce/engine/data/chroma_db/f25fe8e1-f1f1-496d-ae32-06cd6a0d6565/: index_metadata.pickle
src/watchtower_ce/engine/models/: download_model.py
src/watchtower_ce/engine/packaging/: download_embedding_model.py  download_model.py
src/watchtower_ce/engine/scripts/: compliance_checker.py  context_retriever.py  llm_inference.py  pci_compliance_checker.py  pdf_to_chroma.py
src/watchtower_ce/engine/standards/: __init__.py  gdpr_compliance_checker.py  pci_compliance_checker.py
src/watchtower_ce/engine/test_suite/: __init__.py  analysis_quality_evaluator.py  evaluation_metrics.py  evaluators.py  gold_standard.py  ground_truth.py  helpers.py  metrics.py  run_tests.py  runner.py  synonym_set.py  test sample output.md  test_case.py  tests output.md
src/watchtower_ce/engine/test_suite/gold_standard/: pci_dss.py
src/watchtower_ce/engine/utils/: __init__.py  mock_compliance_checker.py  parse_list_response.py  pdf_to_chroma.py  retrieve_context_for_questions.py
src/watchtower_ce/env/: dev.env  prod.env
src/watchtower_ce/settings/: base.py  env.py
test_db/: docker-compose.yml  testE2E.API.http
test_dbs/: gdpr_demo_schema.sql
test_dbs/gdpr/: pg_dump.sql  pg_schema.sql
test_dbs/pci_dss/: mysql_dump.sql  mysql_schema.sql  pg_dump.sql
tests/: evaluation_results.json  output.md
