[project]
name = "watchtower-ce"
description = "Watchtower Compliance Engine API"
requires-python = ">= 3.13"
license = "GPL-3.0-or-later"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "celery[redis]~=5.4",
  "click~=8.3",
  "cloudevents~=1.11",
  "dj-database-url~=3.1",
  "django~=5.2",
  "django-cors-headers~=4.9",
  "django-filter~=25.2",
  "django-stubs~=5.2",
  "djangorestframework~=3.16",
  "djangorestframework-simplejwt~=5.5",
  "djangorestframework-stubs~=3.16",
  "drf-spectacular~=0.28",
  "psycopg[binary,pool]~=3.0",
  "pymysql~=1.1",
  "python-dotenv~=1.1",
  "uvicorn~=0.38",
]
dynamic = ["version"]

[project.scripts]
wtce = "watchtower_ce.cli.main:main"

[project.optional-dependencies]
dev = ["pypdf~=6.4"]
models = ["hf_xet~=1.2.0", "huggingface-hub~=0.35.3", "yaspin~=3.3.0"]
tests = ["pytest~=9.0", "pytest-django~=4.11"]

[dependency-groups]
ai = [
  "chromadb~=1.3.4",
  "langchain-chroma~=1.0.0",
  "langchain-community~=0.4.1",
  "langchain-huggingface~=1.0.1",
  "llama-cpp-python~=0.3.20",
  "sentence-transformers~=5.1.2",
  "torch~=2.9.0",
  "torchaudio~=2.9.0",
  "torchvision~=0.24.0",
]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "watchtower_ce.settings"

[tool.ruff.lint]
ignore = ["F403"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.uv.sources]
torch = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
