[project]
name = "watchtower-ce"
description = "Watchtower Compliance Engine API"
requires-python = ">= 3.13"
license = "GPL-3.0-or-later"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "celery[redis]~=5.6",
  "click~=8.4",
  "dj-database-url~=3.1",
  "django~=6.0",
  "django-cors-headers~=4.9",
  "django-filter~=25.2",
  "django-stubs~=6.0",
  "djangorestframework~=3.17",
  "djangorestframework-simplejwt~=5.5",
  "djangorestframework-stubs~=3.17",
  "drf-spectacular~=0.29",
  "psycopg[binary,pool]~=3.3",
  "pymysql~=1.2",
  "python-dotenv~=1.2",
  "uvicorn~=0.48",
]
dynamic = ["version"]

[project.scripts]
wtce = "watchtower_ce.cli.main:main"

[project.optional-dependencies]
dev = ["pypdf~=6.12", "uv-bump~=0.5"]
models = ["hf-xet~=1.5", "huggingface-hub~=1.17", "yaspin~=3.4"]
tests = ["pytest~=9.0", "pytest-django~=4.12"]

[dependency-groups]
ai = [
  "chromadb~=1.5",
  "langchain-chroma~=1.1",
  "langchain-community~=0.4",
  "langchain-huggingface~=1.2",
  "llama-cpp-python~=0.3",
  "sentence-transformers~=5.5",
  "torch~=2.9.0",
  "torchaudio~=2.9.0",
  "torchvision~=0.24.0",
]

[build-system]
requires = ["setuptools>=82", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "watchtower_ce.settings"

[tool.ruff.lint]
ignore = ["F403"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.uv.sources]
torch = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "torch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
