[project]
name = "watchtower-ce"
description = "Watchtower Compliance Engine API"
requires-python = ">= 3.13"
license = "GPL-3.0-or-later"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "celery[redis]~=5.6",
  "click~=8.4",
  "dj-database-url~=3.1",
  "django~=6.0",
  "django-cors-headers~=4.9",
  "django-filter~=25.2",
  "django-stubs~=6.0",
  "djangorestframework~=3.17",
  "djangorestframework-simplejwt~=5.5",
  "djangorestframework-stubs~=3.17",
  "drf-spectacular~=0.29",
  "psycopg[binary,pool]~=3.3",
  "pymysql~=1.2",
  "python-dotenv~=1.2",
  "uvicorn~=0.48",
]
dynamic = ["version"]

[project.scripts]
wtce = "watchtower_ce.cli.main:main"

[project.optional-dependencies]
dev = ["uv-bump~=0.5"]
models = ["hf-xet~=1.5", "huggingface-hub~=1.17"]
tests = ["pytest~=9.0", "pytest-django~=4.12"]

[build-system]
requires = ["setuptools>=82", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "watchtower_ce.settings"

[tool.ruff.lint]
ignore = ["F403"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.uv.sources]
torch = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
